--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #dbf6e9;
+  background-color: #f7f8f8;
   font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
@@ -16,7 +16,8 @@ body {
 }
 
 h1 {
-  margin: 10px;
+  margin: 20px;
+  color: #800ab6;
 }
 
 .box {
