--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
 
 .box {
   background-color: rgb(176, 101, 187);
-  color: #5e0a85;
+  color: #4f0c6f;
   display: flex;
   align-items: center;
   justify-content: center;
